# app/controllers/entities.js
@@ -1,18 +1,6 @@
 const entitiesService = require('../services/entities');
 
 exports.createOne = (req, res, next) => {
-  /* #swagger.tags = ['Main']
-        #swagger.description = 'Endpoint para adicionar um usuário.' */
-
-  /* #swagger.parameters['Bearer'] = {
-          name: 'authorization',
-          in: 'header',
-          description: 'Bearer + token.',
-          required: true,
-          type: 'string',
-          schema: { $ref: "#/definitions/UserSignUp" }
-  } */
-  
   if(req.body){
     entitiesService
     .createOne(req.body)
